[package]
name = "ferrous-walkthrough"
version = "0.1.0"
authors = ["Alastair Smith <Alastair-smith2@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redisish = { path = "../redisish" }
thiserror = "1.0"

[dev-dependencies]
tempdir = "0.3"
